--- a/finalpackage/templates/index.html
+++ b/finalpackage/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Robot AI Phát Hiện Kim Loại</title>
+  <title>Điều khiển robot ESP-32</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
   <style>
     /* ... (YOUR ORIGINAL CSS - PRESERVED) ... */
@@ -741,5 +741,6 @@
 
   </script>
 </body>
+
 
 </html>
