--- a/finalpackage/templates/index.html
+++ b/finalpackage/templates/index.html
@@ -295,7 +295,7 @@
         <img src="/static/logo.png" alt="Logo" onerror="this.style.display='none'">
       </div>
       <div class="header-title">
-        <h1>HỆ THỐNG ROBOT AI PHÁT HIỆN KIM LOẠI</h1>
+        <h1>HỆ THỐNG ROBOT AI GIÁM SÁT</h1>
         <p>Khoa Điện - Điện tử • Trường ĐH Sư phạm Kỹ thuật TP.HCM</p>
       </div>
     </div>
@@ -744,3 +744,4 @@
 
 
 </html>
+
